yaml/activemq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.24.0 (4a2a0458)
  creationTimestamp: null
  labels:
    io.kompose.service: activemq
  name: activemq
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: activemq
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.24.0 (4a2a0458)
      creationTimestamp: null
      labels:
        io.kompose.network/my_network: "true"
        io.kompose.service: activemq
    spec:
      containers:
        - env:
            - name: ACTIVEMQ_PASSWORD
              value: activemq
            - name: ACTIVEMQ_USERNAME
              value: activemq
          image: webcenter/activemq
          name: activemq
          ports:
            - containerPort: 8161
            - containerPort: 61616
          resources: {}
      restartPolicy: Always
status: {}
