yaml/auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.24.0 (4a2a0458)
  creationTimestamp: null
  labels:
    io.kompose.service: auth
  name: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: auth
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.24.0 (4a2a0458)
      creationTimestamp: null
      labels:
        io.kompose.network/my_network: "true"
        io.kompose.service: auth
    spec:
      containers:
        - env:
            - name: DB_URL
              value: root:root@tcp(mysql:3306)/auth
          image: auth
          name: auth
          ports:
            - containerPort: 8082
          resources: {}
      restartPolicy: Always
status: {}
