yaml/core-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.24.0 (4a2a0458)
  creationTimestamp: null
  labels:
    io.kompose.service: core
  name: core
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: core
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.24.0 (4a2a0458)
      creationTimestamp: null
      labels:
        io.kompose.network/my_network: "true"
        io.kompose.service: core
    spec:
      containers:
        - env:
            - name: ACTIVEMQ_URL
              value: tcp://activemq:61616
          image: core
          name: core
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
