yaml/activemq-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.24.0 (4a2a0458)
  creationTimestamp: null
  labels:
    io.kompose.service: activemq
  name: activemq
spec:
  ports:
    - name: "8161"
      port: 8161
      targetPort: 8161
    - name: "61616"
      port: 61616
      targetPort: 61616
    - name: 61616-tcp
      port: 61616
      targetPort: 61616
  selector:
    io.kompose.service: activemq
status:
  loadBalancer: {}
