yaml/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.24.0 (4a2a0458)
  creationTimestamp: null
  labels:
    io.kompose.service: auth
  name: auth
spec:
  ports:
    - name: "8082"
      port: 8082
      targetPort: 8082
    - name: 8082-tcp
      port: 8082
      targetPort: 8082
  selector:
    io.kompose.service: auth
status:
  loadBalancer: {}
