yaml/core-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.24.0 (4a2a0458)
  creationTimestamp: null
  labels:
    io.kompose.service: core
  name: core
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
    - name: 8080-tcp
      port: 8080
      targetPort: 8080
  selector:
    io.kompose.service: core
status:
  loadBalancer: {}
